--- a/HRManager/src/uicomp/MainFrame.form
+++ b/HRManager/src/uicomp/MainFrame.form
@@ -108,26 +108,26 @@
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <EmptySpace min="-2" pref="158" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="281" max="-2" attributes="0"/>
                               <Component id="jLabel1" min="-2" pref="338" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="99" max="-2" attributes="0"/>
-                              <Component id="jScrollPane1" min="-2" pref="320" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
+                              <Component id="jScrollPane1" min="-2" pref="731" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace pref="458" max="32767" attributes="0"/>
+                      <EmptySpace pref="177" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="82" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                       <Component id="jLabel1" min="-2" pref="42" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="73" max="-2" attributes="0"/>
-                      <Component id="jScrollPane1" min="-2" pref="139" max="-2" attributes="0"/>
-                      <EmptySpace pref="470" max="32767" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="jScrollPane1" min="-2" pref="390" max="-2" attributes="0"/>
+                      <EmptySpace pref="336" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -158,7 +158,7 @@
                     </Property>
                     <Property name="columns" type="int" value="20"/>
                     <Property name="rows" type="int" value="5"/>
-                    <Property name="text" type="java.lang.String" value="Please Note:&#xa;&#xa;Data Validation are as follows:&#xa;1) Phone Number should be of only 10 digits&#xa;2) Date should be only numeric value"/>
+                    <Property name="text" type="java.lang.String" value="Please Note:&#xa;&#xa;A. CRUD Operations are being done as follows:&#xa;   1) Create - In the Create Record Frame (after clicking on ADD in MainFrame), type in the record details, upload image&#xa;                     and click on ADD Record&#xa;   2) Read -   In the View Record Frame (after clicking on VIEW in MainFrame), choose a tabular row and click Button VIEW Record&#xa;   2) Update - In the View Record Frame (after clicking on VIEW in MainFrame), &#xa;                       choose a tabular row, click button VIEW Record, update any of the displayed record details in the View textfields, and&#xa;                       Click UPDATE Record&#xa;   4) Delete - In the View Record Frame (after clicking on VIEW in MainFrame), choose a tabular row and click DELETE Record&#xa;&#xa;B. Search for record happens on the basis of options - Name, Employee ID. For search feature:&#xa;    1) Visit the View Record Frame (clicking on VIEW in MainFrame), at the bottom of the table - search process is present.&#xa;    2) Choose any of the value [Name, Employee ID] from ComboBox &quot;Choose Filtering Criterion&quot;&#xa;    3) Based on the selection, type in relevant Name/Employee ID in Field &quot;Type to Search&quot;&#xa;    4) Click on SEARCH button to filter&#xa;&#xa;C. Photo will be displayed in the View Record Frame, based on the Photo uploaded in Create Record&#xa;  &#xa;D. Data Validation are as follows while creating a new record:&#xa;    1) Phone Number should be of only 10 digits &#xa;    2) Age should be only numeric value"/>
                   </Properties>
                 </Component>
               </SubComponents>
